# atomex-core

./: .gitignore  .soliumrc.json  .travis.yml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  truffle-config.js
.github/workflows/: tests.yml
contracts/ethereum/: AtomexErc20Vault.sol  AtomexEthVault.sol  FiatTokenV1.sol  Migrations.sol
contracts/tezos/: fa12_vault.ligo
migrations/: 1_initial_migration.js  2_deploy_eth_vault.js  3_deploy_erc20_vault.js  4_deploy_tz.py
src/: atomex.ligo
test/: test_atomex.py  test_erc20_vault.js  test_eth_vault.js  test_fa12_vault.py  test_fa2_vault.py  test_tez_vault.py
tests/: test_eth_vault.js  test_tez_vault.py
