[tool.poetry]
name = "atomex-core-tezos"
version = "0.1.0"
description = "Atomex protocol implementation for Tezos"
authors = ["Michael Zaikin <mz@baking-bad.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytezos = "^3.2.11"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
